# rag-gym-impl

./: .gitmodules  Dockerfile  README.md  docker-build.sh  docker-exec.sh  docker-rm.sh  docker-run.sh
.cursor/: task-1-results.md  task-1.md  task-2-results.md  task-2.md  task-3-results.md  task-3.md  task-4-results.md  task-4.md  task-5-results.md  task-5.md
docs/: 1-goal.md
rag-gym-impl/: .env.example  pyproject.toml
rag-gym-impl/src/rag_gym_impl/: actor_agent.py  critic_agent.py  main.py  retrieval_env.py  upstream.py
rag-gym-impl/tests/: test_actor_agent.py  test_actor_agent_integration.py  test_critic_agent.py  test_critic_agent_integration.py  test_e2e_agent_loop.py  test_retrieval_env.py  test_retrieval_env_integration.py
